packages/forge-dsl/fixtures/errors/e09-type-mismatch.fable
// expect: FORGE301
VAR coins = 5
VAR name = "fox"

-> shop
=== shop ===
~ coins = coins + name
{coins} coins remain.
The shopkeep is {name}.
-> END
